<resources>
    <string name="app_name">Melnikova-v-17</string>
    <string name="text1">Кинопоиск</string>
    <string name="text2">Добрый день, Иван!</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="ok">ОК</string>
    <string name="todo9">TODO</string>
    <string name="poisk">Поиск фильма</string>
    <string name="vvedite">Введите название</string>
    <string name="janr">Жанр</string>
    <string name="fan">Фантастика</string>
    <string name="ujas">Ужасы</string>
    <string name="kom">Комедия</string>
    <string name="_2021">Новинки 2021</string>
    <string name="venom">Веном</string>
    <string name="todo10">TODO</string>
    <string name="d">Жанр: фантастика, боевик, триллер, ужасы</string>
    <string name="a">Страны: США, Китай</string>
    <string name="s">Режиссёр: Рубен Флейшер</string>
    <string name="q">Длительность: 112 мин.</string>
    <string name="w">Что, если в один прекрасный день в тебя вселится симбиот,</string>
    <string name="todo11">TODO</string>
    <string name="jk">Добавить в очередь</string>
    <string name="oo">Перейти к просмотру</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="todo123">TODO</string>
</resources>