<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="271dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text1"
        android:textColor="#4D4242"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="59dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/poisk"
        android:textColor="#4D4242"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="351sp"
        android:layout_height="64sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="101dp"
        android:background="#F5F3F3"
        android:elegantTextHeight="false"
        android:keyboardNavigationCluster="false"
        android:paddingHorizontal="17sp"
        android:paddingVertical="16sp"
        android:text="@string/vvedite"
        android:textAllCaps="false"
        android:textColor="#78909C"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="191dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/janr"
        android:textColor="#2E2D2D"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="223dp"
        android:button="@drawable/rectangle_26"
        android:buttonTint="#F5F3F3"
        android:text="@string/fan"
        android:textColor="#4D4242"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="302dp"
        android:layout_marginTop="223dp"
        android:button="@drawable/rectangle_26"
        android:buttonTint=" #F5F3F3"
        android:text="@string/kom"
        android:textColor="#4D4242"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="223dp"
        android:button="@drawable/rectangle_26"
        android:buttonTint=" #F5F3F3"
        android:text="@string/ujas"
        android:textColor="#4D4242"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="269dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_2021"
        android:textColor=" #4D4242"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="325dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_21"
        android:contentDescription="@string/todo10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="325dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/venom"
        android:textColor="#2E2D2D"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="146sp"
        android:layout_height="30sp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="432dp"
        android:text="@string/d"
        android:textColor=" #4D4242"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="146sp"
        android:layout_height="30sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="14dp"
        android:text="@string/s"
        android:textColor=" #4D4242"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="146sp"
        android:layout_height="15sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/a"
        android:textColor=" #4D4242"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="146sp"
        android:layout_height="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="7dp"
        android:text="@string/q"
        android:textColor=" #4D4242"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="352sp"
        android:layout_height="36sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="23dp"
        android:text="@string/w"
        android:textColor="#2E2D2D"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="367dp"
        android:layout_marginTop="537dp"
        android:backgroundTint="#E5E5E5"
        android:contentDescription="@string/todo11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="139dp"
        android:backgroundTint="#C9F6AD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/premium_icon_love_2401368_1"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo123" />

    <Button
        android:id="@+id/button"
        android:layout_width="349sp"
        android:layout_height="48sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#5EF951"
        android:fontFamily="monospace"
        android:onClick="onMyButtonClickWeb"
        android:text="@string/oo"
        android:textAllCaps="false"
        android:textColor="#2E2D2D"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="98dp"
        android:checked="false"
        android:text="@string/jk"
        android:textColor="#4D4242"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="12sp"
        android:thumbTint="#5EF951"
        android:trackTint=" #E7D8D8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>