<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="411sp"
    android:layout_height="823sp"
    android:background="#E5E5E5"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button12"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="314dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_3"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button11"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_9"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button10"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="217dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_6"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="178dp"
        android:layout_marginBottom="314dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_2"
        android:textAllCaps="false"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="178dp"
        android:layout_marginBottom="217dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_5"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="42dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_4"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_7"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="178dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_0"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="178dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_8"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="314dp"
        android:backgroundTint="#C9F6AD"
        android:text="@string/_1"
        android:textAllCaps="false"
        android:textColor="#2E2D2D"
        android:textIsSelectable="true"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="271dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text1"
        android:textColor="#4D4242"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="61dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse_1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="103dp"
        android:text="@string/text2"
        android:textColor="#2E2D2D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="400dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="400dp"
        android:contentDescription="@string/todo4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="221dp"
        android:layout_marginTop="400dp"
        android:contentDescription="@string/todo5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginTop="400dp"
        android:contentDescription="@string/todo6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line_1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:autoText="false"
        android:backgroundTint="#5EF951"
        android:contextClickable="false"
        android:elegantTextHeight="false"
        android:freezesText="false"
        android:onClick="onMyButtonClick"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="735dp"
        android:backgroundTint="#5EF951"
        android:contentDescription="@string/todo9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_18__1_"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>